--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,15 @@
 version: "3.9"
 
 services:
-
   backend:
     build: ./trading-dashboard/backend
     container_name: tradex-backend
     ports:
       - "8080:8080"
     environment:
-      - SPRING_DATA_MONGODB_URI=mongodb+srv://trading_user:trading_user123@cluster0.3h8p0nc.mongodb.net/tradingdb
-      - JWT_SECRET=12345678901234567890123456789012
-      - JWT_EXPIRATION=3600000
+      - SPRING_DATA_MONGODB_URI=${MONGO_URI}
+      - JWT_SECRET=${JWT_SECRET}
+      - JWT_EXPIRATION=${JWT_EXPIRATION:-3600000}
 
   frontend:
     build: ./frontend/tradingfrontend
